[package]
name = "baywatch"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/konradmalik/baywatch"
authors = ["Konrad Malik <https://github.com/konradmalik>"]
description = "Watch files, execute commands on changes."
readme = "README.md"
license = "MIT"
exclude = [
  "/flake.nix",
  "./flake.lock",
  "/.github",
  "/.gitignore",
  "/.envrc",
  "/.editorconfig",
]

[[bin]]
name = "bwatch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "string"] }
clearscreen = "4.0.1"
env_logger = "0.11.8"
ignore = "0.4.23"
log = "0.4.27"
notify = "8.0.0"
